# scanless

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/: main.py
src/static/: tailwind.css
src/templates/: index.html
